# docs/swagger.json
@@ -13,6 +13,75 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
+        "/api/v1/blog": {
+            "post": {
+                "security": [
+                    {
+                        "x-token": []
+                    }
+                ],
+                "description": "用于新建文章",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文章相关接口"
+                ],
+                "summary": "文章发布接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "x-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "文章标题",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "文章简介",
+                        "name": "desc",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "文章内容",
+                        "name": "content",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user/info": {
             "get": {
                 "security": [
@@ -52,7 +121,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/model.UserInfo"
+                                            "$ref": "#/definitions/service.UserService"
                                         }
                                     }
                                 }
@@ -100,25 +169,25 @@
                     },
                     {
                         "type": "string",
-                        "description": "新密码",
+                        "description": "用户邮箱",
                         "name": "email",
                         "in": "formData"
                     },
                     {
                         "type": "integer",
-                        "description": "新密码",
+                        "description": "用户性别",
                         "name": "gender",
                         "in": "formData"
                     },
                     {
                         "type": "integer",
-                        "description": "新密码",
+                        "description": "用户年龄",
                         "name": "age",
                         "in": "formData"
                     },
                     {
                         "type": "string",
-                        "description": "新密码",
+                        "description": "联系方式",
                         "name": "tel",
                         "in": "formData"
                     }
@@ -127,19 +196,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/model.UserInfo"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/model.Response"
                         }
                     },
                     "400": {
@@ -341,7 +398,12 @@
         },
         "/chat/:receiver": {
             "get": {
-                "description": "A chat room connect by websocket",
+                "security": [
+                    {
+                        "x-token": []
+                    }
+                ],
+                "description": "用于聊天室的使用",
                 "consumes": [
                     "application/json"
                 ],
@@ -349,14 +411,42 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "聊天室相关接口"
                 ],
-                "summary": "chat room api",
+                "summary": "聊天室接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "x-token",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "聊天对象",
+                        "name": "receiver",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
                         }
                     }
                 }
@@ -398,29 +488,6 @@
                     "user"
                 ],
                 "summary": "invite member",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/online": {
-            "get": {
-                "description": "get user is online or not",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Get User online",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -476,7 +543,7 @@
                 "user": {}
             }
         },
-        "model.UserInfo": {
+        "service.UserService": {
             "type": "object",
             "properties": {
                 "age": {
